@@ -67,6 +67,14 @@ From 1.6.2 to 1.8:
   working that will no longer work.
   Please see doc/externalivr.txt for details.
 
+* OSP lookup application changes following variable names:
+  OSPPEERIP to OSPINPEERIP
+  OSPTECH to OSPOUTTECH
+  OSPDEST to OSPDESTINATION
+  OSPCALLING to OSPOUTCALLING
+  OSPCALLED to OSPOUTCALLED
+  OSPRESULTS to OSPDESTREMAILS
+
 From 1.6.1 to 1.6.2:
 
 * SIP no longer sends the 183 progress message for early media by
