@@ -133,6 +133,9 @@ Applications
    during the Dial will be set to the argument passed to the 'f' option.
  * Dial now inherits the GOSUB_RETVAL from the peer, when the U() option runs a
    Gosub on the peer.
+ * The OSP lookup application adds in/outbound network ID, optional security,
+   number portability, QoS reporting, destination IP port, custom info and service
+   type features.
 
 Dialplan Functions
 ------------------
